# monotonic-time-c

./: .gitignore  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/: CMakeLists.txt  run.sh
src/examples/: CMakeLists.txt  main.c
src/include/monotonic-time/: lower_bits.h  monotonic_time.h
src/lib/: CMakeLists.txt  lower_bits.c  monotonic_time.c
src/platform/posix/: monotonic_time_posix.c
src/platform/windows/: monotonic_time_windows.c
